--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/react": "^4.4.0",
         "@fontsource-variable/inter": "^5.1.1",
         "@fontsource/roboto": "^5.1.1",
         "@nanostores/persistent": "^0.10.2",
+        "@types/react": "^19.2.2",
+        "@types/react-dom": "^19.2.1",
         "astro": "^5.14.1",
         "nanostores": "^0.11.3",
-        "phosphor-astro": "^2.1.0"
+        "phosphor-astro": "^2.1.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
+        "swiper": "^12.0.2"
     },
     "devDependencies": {
         "postcss-preset-env": "^10.1.5",
