--- a/src/mockProjects.json
+++ b/src/mockProjects.json
@@ -3,18 +3,42 @@
         "id": 1,
         "title": "project 1",
         "description": "project 1",
-        "imageUrl": "https://picsum.photos/1920/1080?random=1"
+        "imageUrl": "https://picsum.photos/1920/1080?random=1",
+        "url": "1"
     },
     {
         "id": 2,
         "title": "project 2",
         "description": "project 2",
-        "imageUrl": "https://picsum.photos/1920/1080?random=2"
+        "imageUrl": "https://picsum.photos/1920/1080?random=2",
+        "url": "2"
     },
     {
         "id": 3,
         "title": "project 3",
         "description": "project 3",
-        "imageUrl": "https://picsum.photos/1920/1080?random=3"
+        "imageUrl": "https://picsum.photos/1920/1080?random=3",
+        "url": "3"
+    },
+    {
+        "id": 4,
+        "title": "project 4",
+        "description": "project 4",
+        "imageUrl": "https://picsum.photos/1920/1080?random=4",
+        "url": "4"
+    },
+    {
+        "id": 5,
+        "title": "project 5",
+        "description": "project 5",
+        "imageUrl": "https://picsum.photos/1920/1080?random=5",
+        "url": "5"
+    },
+    {
+        "id": 6,
+        "title": "project 6",
+        "description": "project 6",
+        "imageUrl": "https://picsum.photos/1920/1080?random=6",
+        "url": "6"
     }
 ]
