--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
         "@fontsource-variable/inter": "^5.1.1",
         "@fontsource/roboto": "^5.1.1",
         "@nanostores/persistent": "^0.10.2",
+        "@sanity/astro": "^3.2.10",
+        "@sanity/client": "^7.12.0",
+        "@sanity/image-url": "^1.2.0",
         "@types/react": "^19.2.2",
-        "@types/react-dom": "^19.2.1",
+        "@types/react-dom": "^19.2.2",
         "astro": "^5.14.1",
         "nanostores": "^0.11.3",
         "phosphor-astro": "^2.1.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-is": "^19.2.0",
+        "sanity": "^4.10.3",
+        "styled-components": "^6.1.19",
         "swiper": "^12.0.2"
     },
     "devDependencies": {
