--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@fontsource-variable/inter": "^5.1.1",
         "@fontsource/roboto": "^5.1.1",
         "@nanostores/persistent": "^0.10.2",
+        "@phosphor-icons/react": "^2.1.10",
         "@sanity/astro": "^3.2.10",
         "@sanity/client": "^7.12.0",
         "@sanity/image-url": "^1.2.0",
