--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/check": "^0.9.5",
         "@astrojs/react": "^4.4.0",
         "@fontsource-variable/inter": "^5.1.1",
         "@fontsource/roboto": "^5.1.1",
@@ -27,7 +28,8 @@
         "react-is": "^19.2.0",
         "sanity": "^4.10.3",
         "styled-components": "^6.1.19",
-        "swiper": "^12.0.2"
+        "swiper": "^12.0.2",
+        "typescript": "^5.9.3"
     },
     "devDependencies": {
         "postcss-preset-env": "^10.1.5",
