--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@astrojs/check": "^0.9.5",
+        "@astrojs/cloudflare": "^12.6.10",
         "@astrojs/react": "^4.4.0",
         "@fontsource-variable/inter": "^5.1.1",
         "@fontsource/roboto": "^5.1.1",
